vcluster_versioned_docs/version-0.30.0/deploy/control-plane/binary/basics.mdx
---
title: Create control plane
sidebar_label: Install
sidebar_position: 1
sidebar_class_name: standalone private-nodes
---
import Flow, { Step } from "@site/src/components/Flow"

import StandaloneFlags from '../../../_fragments/deploy/standalone-flags.mdx'
import TenancySupport from '../../../_fragments/tenancy-support.mdx';
import PageVariables from '@site/src/components/PageVariables';
import InterpolatedCodeBlock from '@site/src/components/InterpolatedCodeBlock';

<TenancySupport standalone="true" />

## Overview

When deploying vCluster Standalone, the assets required to install the control plane are located in
the [GitHub releases](https://github.com/loft-sh/vcluster/releases) of vCluster.

## Predeployment configuration options

Before deploying, it's recommended to review the set of configuration options
 that cannot be updated post deployment. These options require deploying a new
 vCluster instead of upgrading your vCluster with new options.

### Control-plane options  {#control-plane-options}

* [High availability](./high-availability) - Run multiple control plane nodes
* [CoreDNS](../../../configure/vcluster-yaml/control-plane/components/coredns) - Currently only CoreDNS deployed by vCluster during startup is supported.
* Backing Store - Decide how the data of your cluster is stored, must be one of either [embedded SQLite](/vcluster/configure/vcluster-yaml/control-plane/components/backing-store/database/sqlite) (the default) or [embedded etcd](/vcluster/configure/vcluster-yaml/control-plane/components/backing-store/etcd/embedded).


### Node Roles

Decide if the control plane node will also be a worker node or not. Once a node joins the cluster, the roles of the node cannot change.

### Worker Nodes

 With vCluster Standalone, worker node pools can only be [private nodes](../../worker-nodes/private-nodes). Since there is no host cluster,
 there is no concept of host nodes.

## Prerequisites

- Access to a node that satisfies the [node requirements](./node-requirements)

## Install control plane node

:::tip Control Plane Node
All steps are performed on the control plane node.
:::
<Flow>
    <Step>
    Replace the `VCLUSTER_VERSION` with the vCluster version you want to install and the `CONFIG_DIRECTORY` with the directory to store the vCluster configuration values file, the `vcluster.yaml`.
    <PageVariables VCLUSTER_VERSION="v0.30.0" CONFIG_DIRECTORY="/etc/vcluster" />
    </Step>
    <Step>
        Create directory for storing vCluster Standalone configuration.
        <InterpolatedCodeBlock
          code={`mkdir -p [[GLOBAL:CONFIG_DIRECTORY]]`}
          title="Create config directory"
          language="bash"
        />
        Save a basic `vcluster.yaml` configuration file for vCluster Standalone on the control plane node.
        <InterpolatedCodeBlock
          code={`cat <<EOF > [[GLOBAL:CONFIG_DIRECTORY]]/vcluster.yaml
  controlPlane:
    standalone:
      enabled: true
      joinNode:
        enabled: true  # Optional: Control Plane node will also be considered a worker node
  privateNodes: # Required for adding additional worker nodes
    enabled: true
  EOF`}
          title="Create vCluster config file"
          language="yaml"
        />

:::warning
Adding additional control plane nodes will not be supported unless you follow the [high availability](./high-availability) steps for configuration.
:::
    </Step>
    <Step>
       Authenticate with sudo privileges to access the Kubernetes context:
        ```bash
        sudo su -
        ```
        Then run the installation script on the control plane node:
        <InterpolatedCodeBlock
          code={`curl -sfL https://github.com/loft-sh/vcluster/releases/download/[[GLOBAL:VCLUSTER_VERSION]]/install-standalone.sh | sh -s -- --vcluster-name standalone`}
          title="Install vCluster Standalone on control plane node"
          language="bash"
        />

    </Step>
    <Step>
        Check that the control plane node is ready.

        After installation, the kubeconfig is automatically configured on the control plane node.
        The kubectl context is set to interact with your new vCluster Standalone instance.

        Run these commands on the control plane node:

        ```bash title="Check node status"
        kubectl get nodes
        ```

        Expected output:
        ```bash
        NAME               STATUS   ROLES                  AGE   VERSION
        ip-192-168-3-131   Ready    control-plane,master   11m   v1.32.1
        ```

        ```bash title="Verify cluster components are running"
        kubectl get pods -A
        ```

        Pods should include:
        - **Flannel**: CNI for container networking
        - **CoreDNS**: DNS service for the cluster
        - **KubeProxy**: Network traffic routing and load balancing
        - **Konnectivity**: Secure control plane to worker node communication
        - **Local Path Provisioner**: Dynamic storage provisioning
    </Step>

</Flow>

<StandaloneFlags />

## Access your cluster

After installation, the kubeconfig is automatically configured on the control plane node. The kubectl context is set to interact with your new vCluster Standalone instance.
If you decide to use vCluster Standalone as a host cluster for virtual clusters, then you can set your current kube context to the vCluster Standalone and create and interact with virtual clusters using vCluster CLI.

To access the cluster from other machines, copy the kubeconfig from `/var/lib/vcluster/kubeconfig.yaml` on the control plane node, then replace the server field with relevant IP or DNS to access the cluster.
You can also configure vCluster to make [external access easier](../../../manage/accessing-vcluster#access-vcluster-externally).

The vCluster CLI is installed at `/var/lib/vcluster/bin/vcluster-cli`.
